--- a/scss/style.scss
+++ b/scss/style.scss
@@ -32,7 +32,7 @@ body {
     display: flex;
     height:70vh;
     width: 100%;
-    background-image: linear-gradient(to bottom, #1d277db5, #1d277db5), url("../img/header-bg.jpg");
+    background-image: linear-gradient(to bottom, #1d277db5, #03c987b5), url("../img/header-bg.jpg");
     background-size: cover;
     background-repeat: no-repeat;
 
